[package]
name = "worker-ratelimit"
version = "0.4.0"
edition = "2021"
description = "General purpose rate limiting library for Cloudflare Workers"
authors = ["kpcyrd <git@rxv.cc>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/kpcyrd/worker-ratelimit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

[dependencies]
serde_json = "1.0.114"
thiserror = "2"
worker = "0.8"
